# Pylot

./: .gitignore  Cargo.toml  README.md  build.rs  llvm-cov.toml  makefile  nextest.toml  requirements.txt  settings.toml
.github/workflows/: rust.yml
PyPilot/: Cargo.toml
PyPilot/src/: main.rs
PyPilot/src/cli/: run.rs
PyPilot/src/core/: uv.rs  venv.rs  venvmanager.rs
PyPilot/src/utility/: constants.rs  util.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  venvtraits.rs
docs/: Project_Architecture_Blueprint.md
pylot/: Cargo.toml  settings.toml
pylot/src/: lib.rs  main.rs
pylot/src/cli/: cmds.rs  mod.rs  run.rs  styles.rs
pylot/src/tests/: cmds_tests.rs  main_tests.rs  mod.rs
pylot/tests/: cmds.rs  helpers.rs  lib.rs  main.rs
pypilot/: Cargo.toml  llvm-cov.toml
pypilot/src/: main.rs
pypilot/src/cli/: clicmd.rs
pypilotlib/: Cargo.toml
pypilotlib/src/: lib.rs
pypilotlib/src/core/: processes.rs
pypilotlib/src/utility/: constants.rs  utils.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs
shared/src/cfg/: logger.rs  logger_tests.rs  mod.rs  settings.rs  settings_tests.rs
shared/src/core/: mod.rs  processes.rs
shared/src/infra/: processes.rs
shared/src/logging/: logger.rs
shared/src/tests/: mod.rs  processes_tests.rs  uvctrl_tests.rs  venvmanager_tests.rs
shared/src/utility/: constants.rs  constants_tests.rs  mod.rs  utils.rs  utils_tests.rs
shared/src/uv/: mod.rs  uvctrl.rs
shared/src/venvcore/: uv.rs  venv.rs  venvmanager.rs
shared/src/virtualenv/: mod.rs  uvvenv.rs  venv.rs  venv_tests.rs  venvmanager.rs  venvtraits.rs
shared/tests/: constants.rs  helpers.rs  logger.rs  processes.rs  settings.rs  utils.rs  uvctrl.rs  uvvenv.rs  venv.rs  venvmanager.rs
src/: main.rs
src/cfg/: settings.rs
src/cli/: clicmd.rs  mod.rs  run.rs
src/cli_core/: cli.rs  mod.rs  run.rs
src/cmd/: manage.rs  manage_uv.rs  mod.rs  utils.rs  venv.rs  venvmgr.rs  venvmngr.rs
src/core/: cli.rs  mod.rs  uv.rs  venv.rs  venvmanager.rs
src/interface/: cli.rs  cli_styles.rs  mod.rs
src/shell/: processes.rs
src/utility/: constants.rs  util.rs
tui/: Cargo.toml
tui/src/: actions.rs  app.rs  create_dialog.rs  create_field.rs  dialogs.rs  lib.rs  tabs.rs  ui.rs
tui/src/tui/: app.rs  cmds.rs  content.rs  header_footer.rs  mod.rs  run.rs  ui.rs
tui/src/tui_old/: app.rs  content.rs  run.rs
