[workspace]
resolver = "2"
members = ["pylot", "shared"]

[workspace.dependencies]
colored = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
ctrlc = "3.5.0"
winapi = "0.3.9"
which = "8.0.0"
config = "0.15"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
shellexpand = "3.1"
toml = "0.9"
comfy-table = "7.2"
shared = { path = "./shared" }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11", default-features = true, features = ["color"] }
clap_complete = "4.5"
