[workspace]
resolver = "2"
members = ["core", "pylot", "shared", "tui"]

[workspace.dependencies]
pylot-core = { path = "./core" }
colored = "3.0.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
ctrlc = "3.5.0"
winapi = "0.3.9"
which = "8.0.0"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
toml = "0.9"
comfy-table = "7.2"
shared = { path = "./shared" }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11", default-features = true, features = ["color"] }
clap_complete = "4.5"
thiserror = "2.0"
futures = "0.3"
ratatui = "0.30.0"
crossterm = "0.28.1"
pylot-tui = { path = "./tui" }
