[workspace]
resolver = "2"
members = ["core", "pylot", "shared", "tui"]

[workspace.dependencies]
pylot-core = { path = "./core" }
colored = "3.1.1"
tokio = { version = "1.50.0", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
  "io-util",
] }
ctrlc = "3.5.2"
winapi = "0.3.9"
which = "8.0.2"
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
toml = "1.1.1+spec-1.1.0"
comfy-table = "7.2.2"
pylot-shared = { path = "./shared" }
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
env_logger = { version = "0.11.10", default-features = true, features = [
  "color",
] }
clap_complete = "4.6.0"
thiserror = "2.0.18"
futures = "0.3.32"
ratatui = "0.30.0"
crossterm = "0.29.0"
pylot-tui = { path = "./tui" }
