[package]
name = "pylot"
version = "0.5.0"
edition = "2021"
authors = ["Fulrix"]

[lib]
name = "pylot"

[dependencies]
shared = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
clap_complete = { workspace = true }
log = { workspace = true }

[dev-dependencies]
assert_cli = "0.6"
shellexpand = "3.1"
