[package]
name = "pylot"
version = "0.5.0"
edition = "2021"
authors = ["Fulrix"]

[lib]
name = "pylot"

[dependencies]
shared = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
clap_complete = { workspace = true }
log = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
shellexpand = { workspace = true }
tokio-test = "0.4"
tempfile = "3.23"
