[package]
name = "pylot"
version = "0.6.0"
edition = "2021"
authors = ["Fulrix"]

[lib]
name = "pylot"

[dependencies]
pylot-shared = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
clap_complete = { workspace = true }
log = { workspace = true }
pylot-tui = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
shellexpand = { workspace = true }
tokio-test = "0.4.5"
tempfile = "3.27.0"
