[package]
name = "pypilot"
version = "0.4.4"
edition = "2021"
authors = ["Fulrix"]

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
comfy-table = "7.2"
once_cell = "1.21"
tokio = { version = "1.47", features = ["full"] }
shellexpand = "3.1"
winapi = "0.3"
which = "8.0.0"

[dev-dependencies]
assert_cli = "0.6"
toml = "0.9"
