[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Fulrix"]

[dependencies]
colored = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
ctrlc = "3.5.0"
winapi = "0.3.9"
which = "8.0.0"
config = "0.15"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
shellexpand = "3.1"
toml = "0.9"
comfy-table = "7.2"

[dev-dependencies]
tempfile = "3.23"
