[package]
name = "shared"
version = "0.5.0"
edition = "2021"
authors = ["Fulrix"]

[dependencies]
colored = { workspace = true }
tokio = { workspace = true }
ctrlc = { workspace = true }
winapi = { workspace = true }
which = { workspace = true }
config = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_path_to_error = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }
comfy-table = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = "3.23"
