[package]
name = "shared"
version = "0.5.0"
edition = "2021"
authors = ["Fulrix"]

[features]
testing = []

[dependencies]
pylot-core = { workspace = true }
colored = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }
comfy-table = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[target.'cfg(windows)'.dependencies]
ctrlc = { workspace = true }
winapi = { workspace = true }

[dev-dependencies]
tempfile = "3.23"
