[package]
name = "pylot-tui"
version = "0.6.0"
edition = "2021"
authors = ["Fulrix"]

[lib]
name = "pylot_tui"

[dependencies]
pylot-shared = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
log = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
futures = { workspace = true }
shellexpand = { workspace = true }
