[package]
name = "pylot-tui"
version = "0.6.1"
edition = "2021"
authors = ["Fulrix"]

[lib]
name = "pylot_tui"

[dependencies]
pylot-shared = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
log = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
futures = { workspace = true }
shellexpand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
